--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^0.19.2",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "react": "^16.13.1",
